[package]
name = "sworndisk-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inherit-methods-macro = {git = "https://github.com/jinzhao-dev/inherit-methods-macro", rev = "98f7e3e"}
pod = {git = "https://github.com/jinzhao-dev/pod", rev = "7fa2ed2"}

anymap = {version = "0.12.1"}
bitvec = {version = "1.0.1", default-features = false, features = ["atomic", "alloc"]}
serde = {version = "1.0", features = ["derive"]}
spin = "0.9.8"
static_assertions = "1.1.0"
typetag = "0.2"

[lib]
doctest = false
