[package]
name = "sworndisk-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inherit-methods-macro = {git = "https://github.com/jinzhao-dev/inherit-methods-macro", rev = "98f7e3e"}
pod = {git = "https://github.com/jinzhao-dev/pod", rev = "7fa2ed2"}

anymap = {version = "1.0.0-beta.2", default-features = false, features = ["hashbrown"]}
array-init = "2.1.0"
bitvec = {version = "1.0.1", default-features = false, features = ["atomic", "alloc", "serde"]}
hashbrown = "0.12.3"
lending-iterator = "0.1.7"
log = "0.4"
lru = "0.8.1"
openssl = "0.10.55"
postcard = "1.0.0"
serde = {version = "1.0", features = ["derive"]}
spin = "0.9.8"
static_assertions = "1.1.0"
typetag = "0.2"

[lib]
doctest = false

[features]
default = ["std"]
jinux = []
linux = []
occlum = []
std = []
