[package]
name = "sworndisk-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
bindings = { path = "../linux/bindings", optional = true }
inherit-methods-macro = {git = "https://github.com/asterinas/inherit-methods-macro", rev = "98f7e3e"}
pod = {git = "https://github.com/asterinas/pod", rev = "7fa2ed2"}

array-init = "2.1.0"
bittle = "0.5.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
lending-iterator = "=0.1.7"
lru = "=0.8.1"
postcard = "=1.0.6"
static_assertions = "1.1.0"
ahash = { version = "=0.7.7", default-features = false }
anymap = { version = "=1.0.0-beta.2", default-features = false, features = ["hashbrown"] }
hashbrown = { version = "=0.12.3", features = ["serde"] }
log = { version = "0.4", optional =  true }
openssl = { version = "0.10.55", optional = true }
serde = { version = "=1.0.188", default-features = false, features = ["alloc", "derive"] }
spin = { version = "0.9.8", optional = true }

[lib]
doctest = false

[features]
default = ["std"]
jinux = []
linux = ["bindings"]
occlum = []
std = ["log", "openssl", "spin"]
