[package]
name = "sworndisk-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
bindings = { path = "../linux/bindings", optional = true }
btree = { git = "https://github.com/asterinas/btree.git", rev = "8583630", optional = true }
inherit-methods-macro = {git = "https://github.com/asterinas/inherit-methods-macro", rev = "98f7e3e"}
pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }

anymap = { git = "https://github.com/lucassong-mh/anymap", branch = "1.0.0-beta.2-patched", default-features = false, features = ["hashbrown"] }
array-init = "2.1.0"
bittle = "0.5.6"
crossbeam-queue = { version = "=0.3.11", default-features = false, features = ["alloc"] }
hashbrown = { version = "=0.14.3", features = ["serde"]  }
lending-iterator = "=0.1.7"
log = { version = "0.4", optional =  true }
lru = "=0.12.3"
openssl = { version = "0.10.55", optional = true }
postcard = "=1.0.6"
serde = { version = "=1.0.188", default-features = false, features = ["alloc", "derive"] }
spin = { version = "0.9.8", optional = true }
static_assertions = "1.1.0"

sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace", "thread"], optional = true }
sgx_rand = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
default = ["std"]
std = ["spin", "openssl", "log"]
linux = ["bindings", "btree"]
occlum = ["sgx_tstd", "sgx_rand", "sgx_tcrypto", "sgx_types", "spin", "log"]
jinux = []


[lib]
doctest = false

[dev-dependencies]
libc = "=0.2.147"

[[bench]]
name = "bench"
harness = false
